# churn-prediction-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  model.py  schemas.py  train.py
tests/: conftest.py  test_api.py  test_model.py
