[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction-api"
version = "1.0.0"
description = "FastAPI service that serves customer churn predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
